--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "keycloak-connect": "^11.0.0",
     "next": "9.5.1",
+    "querystring": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.1.1"
+    "semantic-ui-react": "^1.1.1",
+    "swr": "^0.3.0"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
